🗃️ Committing everything that changed 🗃️
Dockerfile
.env.scripts

--- a/.env.scripts
+++ b/.env.scripts
@@ -11,7 +11,7 @@
 # Dockerfile info
 ENV_DOCKERFILE="Dockerfile"
 ENV_IMAGE_NAME="nodejs"
-ENV_USE_TEMPLATE="alpine"
+ENV_USE_TEMPLATE="debian"
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 # Maintainer info
 ENV_VENDOR="CasjaysDev"
@@ -29,7 +29,7 @@ ENV_IMAGE_TAG="latest"
 ENV_ADD_TAGS=""
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 # Pull image info
-ENV_PULL_URL="casjaysdev/alpine"
+ENV_PULL_URL="casjaysdev/debian"
 ENV_DISTRO_TAG="$IMAGE_VERSION"
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 # Env
