🗃️ Committing everything that changed 🗃️
Dockerfile
.env.scripts

--- a/.env.scripts
+++ b/.env.scripts
@@ -1,10 +1,10 @@
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-##@Version           :  202308292346-git
+##@Version           :  202308300016-git
 # @@Author           :  CasjaysDev
 # @@Contact          :  CasjaysDev <docker-admin@casjaysdev.pro>
 # @@License          :  MIT
 # @@Copyright        :  Copyright 2023 CasjaysDev
-# @@Created          :  Tue Aug 29 11:46:45 PM EDT 2023
+# @@Created          :  Wed Aug 30 12:16:05 AM EDT 2023
 # @@File             :  .env.scripts
 # @@Description      :  Variables for gen-dockerfile and buildx scripts
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
