🗃️ Committing everything that changed 🗃️
Dockerfile
Dockerfile.14
Dockerfile.16
Dockerfile.18
Dockerfile.20
.env.scripts

--- a/Dockerfile.18
+++ b/Dockerfile.18
@@ -15,11 +15,11 @@ ARG USER="root"
 ARG SERVICE_PORT=""
 ARG EXPOSE_PORTS="3000-3005"
 ARG PHP_VERSION="php81"
-ARG NODE_VERSION="22"
+ARG NODE_VERSION="18"
 ARG NODE_MANAGER="fnm"
 
 ARG IMAGE_REPO="casjaysdevdocker/nodejs"
-ARG IMAGE_VERSION="latest"
+ARG IMAGE_VERSION="18"
 ARG CONTAINER_VERSION=""
 
 ARG PULL_URL="casjaysdev/debian"
