--- a/Dockerfile.12
+++ b/Dockerfile.12
@@ -19,7 +19,7 @@ ARG NODE_VERSION="12"
 ARG NODE_MANAGER="fnm"
 
 ARG IMAGE_REPO="casjaysdevdocker/nodejs"
-ARG IMAGE_VERSION="12"
+ARG IMAGE_VERSION="latest"
 ARG CONTAINER_VERSION=""
 
 ARG PULL_URL="casjaysdev/debian"
