--- a/Dockerfile.14
+++ b/Dockerfile.14
@@ -20,10 +20,10 @@ ARG NODE_MANAGER="fnm"
 
 ARG IMAGE_REPO="casjaysdevdocker/nodejs"
 ARG IMAGE_VERSION="${NODE_VERSION}"
-ARG CONTAINER_VERSION=""
+ARG CONTAINER_VERSION="${NODE_VERSION}"
 
 ARG PULL_URL="casjaysdev/debian"
-ARG DISTRO_VERSION="latest"
+ARG DISTRO_VERSION="$IMAGE_VERSION"
 ARG BUILD_VERSION="${BUILD_DATE}"
 
 FROM tianon/gosu:latest AS gosu
@@ -45,6 +45,8 @@ ARG DEFAULT_CONF_DIR
 ARG DEFAULT_TEMPLATE_DIR
 ARG DISTRO_VERSION
 ARG PHP_VERSION
+ARG NODE_VERSION
+ARG NODE_MANAGER
 
 ARG PACK_LIST="bash \
   "
@@ -138,7 +140,7 @@ RUN \
 
 RUN set -ex; \
   echo "Custom Applications"; \
-  export PHP_VERSION=$PHP_VERSION NODE_VERSION=$NODE_VERSION NODE_MANAGER=$NODE_MANAGER; \
+  export PHP_VERSION="${PHP_VERSION}}" NODE_VERSION="${NODE_VERSION}" NODE_MANAGER="${NODE_MANAGER}"; \
   bash -c "$(curl -q -LSsf "https://github.com/templatemgr/nodejs/raw/main/install.sh")"; \
   echo ""
 
