🗃️ Committing everything that changed 🗃️
Dockerfile.10
Dockerfile.12
Dockerfile.14
Dockerfile.16
Dockerfile.18
Dockerfile.20

--- a/Dockerfile.10
+++ b/Dockerfile.10
@@ -20,10 +20,10 @@ ARG NODE_MANAGER="fnm"
 
 ARG IMAGE_REPO="casjaysdevdocker/nodejs"
 ARG IMAGE_VERSION="${NODE_VERSION}"
-ARG CONTAINER_VERSION="${NODE_VERSION}"
+ARG CONTAINER_VERSION=""
 
 ARG PULL_URL="casjaysdev/debian"
-ARG DISTRO_VERSION="$IMAGE_VERSION"
+ARG DISTRO_VERSION="latest"
 ARG BUILD_VERSION="${BUILD_DATE}"
 
 FROM tianon/gosu:latest AS gosu
