--- a/Dockerfile.12
+++ b/Dockerfile.12
@@ -20,10 +20,10 @@ ARG NODE_MANAGER="fnm"
 
 ARG IMAGE_REPO="casjaysdevdocker/nodejs"
 ARG IMAGE_VERSION="${NODE_VERSION}"
-ARG CONTAINER_VERSION="${NODE_VERSION}"
+ARG CONTAINER_VERSION=""
 
 ARG PULL_URL="casjaysdev/debian"
-ARG DISTRO_VERSION="$IMAGE_VERSION"
+ARG DISTRO_VERSION="latest"
 ARG BUILD_VERSION="${BUILD_DATE}"
 
 FROM tianon/gosu:latest AS gosu
