🗃️ Committing everything that changed 🗃️
Dockerfile
Dockerfile.10
Dockerfile.12
Dockerfile.14
Dockerfile.16
Dockerfile.18
Dockerfile.20
.env.scripts
.gitattributes
.gitignore
rootfs/.gitea/
rootfs/root/
rootfs/usr/local/bin/entrypoint.sh
rootfs/usr/local/bin/pkmgr
rootfs/usr/local/etc/docker/functions/entrypoint.sh
rootfs/usr/local/share/template-files/config/env/default.sample

--- a/.env.scripts
+++ b/.env.scripts
@@ -1,12 +1,18 @@
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-##@Version           :  202308300016-git
+##@Version           :  202509161149-git
 # @@Author           :  CasjaysDev
 # @@Contact          :  CasjaysDev <docker-admin@casjaysdev.pro>
 # @@License          :  MIT
-# @@Copyright        :  Copyright 2023 CasjaysDev
-# @@Created          :  Wed Aug 30 12:16:05 AM EDT 2023
+# @@Copyright        :  Copyright 2025 CasjaysDev
+# @@Created          :  Tue Sep 16 11:49:14 AM EDT 2025
 # @@File             :  .env.scripts
 # @@Description      :  Variables for gen-dockerfile and buildx scripts
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+# entrypoint Settings
+DOCKER_ENTYPOINT_PORTS_WEB="${DOCKER_ENTYPOINT_PORTS_WEB}"
+DOCKER_ENTYPOINT_PORTS_SRV="${DOCKER_ENTYPOINT_PORTS_SRV}"
+DOCKER_ENTYPOINT_HEALTH_APPS="$DOCKER_ENTYPOINT_HEALTH_APPS"
+DOCKER_ENTYPOINT_HEALTH_ENDPOINTS="$DOCKER_ENTYPOINT_HEALTH_ENDPOINTS"
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 # Dockerfile info
 ENV_DOCKERFILE="Dockerfile"
@@ -14,23 +20,25 @@ ENV_IMAGE_NAME="nodejs"
 ENV_USE_TEMPLATE="debian"
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 # Maintainer info
+ENV_ORG_NAME="casjaysdevdocker"
 ENV_VENDOR="CasjaysDev"
 ENV_AUTHOR="CasjaysDev"
 ENV_MAINTAINER="CasjaysDev <docker-admin@casjaysdev.pro>"
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 # REPO info
-ENV_ORG_NAME="casjaysdevdocker"
 ENV_GIT_REPO_URL="https://github.com/casjaysdevdocker/nodejs"
 ENV_REGISTRY_URL="docker.io"
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 # Push image info
-ENV_IMAGE_REPO="casjaysdevdocker/nodejs"
+ENV_IMAGE_PUSH="casjaysdevdocker/nodejs"
 ENV_IMAGE_TAG="latest"
 ENV_ADD_TAGS=""
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+ENV_ADD_IMAGE_PUSH=""
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 # Pull image info
 ENV_PULL_URL="casjaysdev/debian"
-ENV_DISTRO_TAG="$IMAGE_VERSION"
+ENV_DISTRO_TAG="${IMAGE_VERSION}"
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 # Env
 SERVICE_PORT=""
@@ -38,6 +46,8 @@ EXPOSE_PORTS="1-65535"
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 # Versions
 PHP_VERSION="php81"
+NODE_VERSION="system"
+NODE_MANAGER="system"
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 # Default directories
 WWW_ROOT_DIR="/usr/local/share/httpd/default"
@@ -45,3 +55,6 @@ DEFAULT_FILE_DIR="/usr/local/share/template-files"
 DEFAULT_DATA_DIR="/usr/local/share/template-files/data"
 DEFAULT_CONF_DIR="/usr/local/share/template-files/config"
 DEFAULT_TEMPLATE_DIR="/usr/local/share/template-files/defaults"
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+ENV_PACKAGES=""
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
