--- a/.gitea/workflows/docker-18.yaml
+++ b/.gitea/workflows/docker-18.yaml
@@ -1,9 +1,9 @@
-name: release-tag
+name: nodejs-18
 
 on: push
 
 jobs:
-  release-image:
+  release-nodejs-18:
     runs-on: act_runner
     container:
       image: catthehacker/ubuntu:act-latest
@@ -19,13 +19,11 @@ jobs:
       - name: Get Meta
         id: meta
         run: |
-          echo DATE_TAG=$(date +'%y%m') >> $GITHUB_OUTPUT
+          echo DOCKER_TAG=18 >> $GITHUB_OUTPUT
           echo REPO_VERSION=$(git describe --tags --always | sed 's/^v//') >> $GITHUB_OUTPUT
           echo DOCKER_ORG=$(echo ${GITHUB_REPOSITORY} | awk -F"/" '{print $1}') >> $GITHUB_OUTPUT
-          echo DOCKER_TAG=$([ -n "$DOCKER_TAG" ] && echo ${DOCKER_TAG} || echo "latest") >> $GITHUB_OUTPUT
           echo DOCKER_HUB=$([ -n "$DOCKER_HUB" ] && echo ${DOCKER_HUB} || echo "docker.io") >> $GITHUB_OUTPUT
           echo REPO_NAME=$(echo ${GITHUB_REPOSITORY} | awk -F"/" '{print $2}' | sed 's|^docker-||g') >> $GITHUB_OUTPUT
-          echo "$DOCKER_HUB/$DOCKER_ORG/$REPO_NAME:$DOCKER_TAG"
 
       - name: Set up Docker BuildX
         uses: docker/setup-buildx-action@v2
@@ -41,11 +39,10 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          file: ./Dockerfile
+          file: ./Dockerfile.18
           platforms: |
             linux/amd64
             linux/arm64
           push: true
           tags: |
-            ${{ steps.meta.outputs.DOCKER_HUB }}/${{ steps.meta.outputs.DOCKER_ORG }}/${{ steps.meta.outputs.REPO_NAME }}:${{ steps.meta.outputs.DATE_TAG }}
             ${{ steps.meta.outputs.DOCKER_HUB }}/${{ steps.meta.outputs.DOCKER_ORG }}/${{ steps.meta.outputs.REPO_NAME }}:${{ steps.meta.outputs.DOCKER_TAG }}
